# pytest-rxdist

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
rust/: Cargo.toml
rust/src/: controller.rs  ipc.rs  lib.rs  scheduler.rs  shm.rs
scripts/: bench.py
src/pytest_rxdist/: _worker_main.py  controller.py  core.py  fixture_grouping.py  ipc.py  plugin.py  rust_engine.py  scheduler.py  shm.py  timing_store.py  worker.py
tests/: bench_fixture_heavy.py  bench_many_tiny.py  bench_mixed_duration.py  test_fixture_grouping_unit.py  test_ipc_shm_unit.py  test_milestone1_integration.py  test_milestone2_profile_integration.py  test_milestone4_reuse.py  test_milestone6_fixture_grouping.py  test_robustness_isolation_fixtures_stress.py  test_robustness_more.py  test_rust_engine_parity_integration.py  test_scheduler_unit.py  test_smoke.py
