[build-system]
requires = ["maturin>=1.7"]
build-backend = "maturin"

[project]
name = "pytest-rxdist"
version = "0.0.0"
description = "Rust-accelerated next-generation execution engine for pytest (planned)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "RXDist contributors" }]
license = { text = "MIT" }
keywords = ["pytest", "xdist", "parallel", "rust"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Framework :: Pytest",
  "Programming Language :: Python",
  "Programming Language :: Rust",
]
dependencies = []

[project.entry-points.pytest11]
pytest_rxdist = "pytest_rxdist.plugin"

[tool.maturin]
python-source = "src"
module-name = "pytest_rxdist._core"

