[package]
name = "pytest_rxdist_core"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
publish = false

[lib]
name = "pytest_rxdist_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
